--- a/vue-admin/index.html
+++ b/vue-admin/index.html
@@ -24,7 +24,7 @@
 
   <body>
 		<div id="app"></div>
-    
+    <script src="node_modules/axios/dist/axios.min.js"></script>
 		<script src="node_modules/vue/dist/vue.min.js"></script>
 		<script src="js/componetes/layout/Navbar.js"></script>
 		<script src="js/componetes/layout/Sidebar.js"></script>
