'post'preflight'issues'solved'

--- a/vue-admin/index.html
+++ b/vue-admin/index.html
@@ -29,6 +29,7 @@
 		<script src="js/componetes/layout/Navbar.js"></script>
 		<script src="js/componetes/layout/Sidebar.js"></script>
 		<script src="js/componetes/Home/Home.js"></script>
+    <script src="js/componetes/hero/Creat.js"></script>
     <script src="js/componetes/hero/List.js"></script>
 		<script src='node_modules/vue-router/dist/vue-router.min.js'></script>
 		<script src="js/router/index.js"></script>
