'`${id}`not'${id}''

--- a/vue-admin/index.html
+++ b/vue-admin/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,31 +9,27 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-
     <title>Dashboard Template for Bootstrap</title>
-
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
     <!-- Custom styles for this template -->
     <link href="./css/dashboard.css" rel="stylesheet">
+</head>
 
-
-  </head>
-
-  <body>
-		<div id="app"></div>
+<body>
+    <div id="app"></div>
     <script src="node_modules/axios/dist/axios.min.js"></script>
-		<script src="node_modules/vue/dist/vue.min.js"></script>
-		<script src="js/componetes/layout/Navbar.js"></script>
-		<script src="js/componetes/layout/Sidebar.js"></script>
-		<script src="js/componetes/Home/Home.js"></script>
+    <script src="node_modules/vue/dist/vue.min.js"></script>
+    <script src="js/componetes/layout/Navbar.js"></script>
+    <script src="js/componetes/layout/Sidebar.js"></script>
+    <script src="js/componetes/Home/Home.js"></script>
     <script src="js/componetes/hero/Creat.js"></script>
     <script src="js/componetes/hero/List.js"></script>
-		<script src='node_modules/vue-router/dist/vue-router.min.js'></script>
-		<script src="js/router/index.js"></script>
-		<script src="js/App.js"></script>
-		<script src="js/main.js"></script>
-  </body>
+    <script src="js/componetes/hero/Show.js"></script>
+    <script src='node_modules/vue-router/dist/vue-router.min.js'></script>
+    <script src="js/router/index.js"></script>
+    <script src="js/App.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
