--- a/vue-admin/index.html
+++ b/vue-admin/index.html
@@ -26,6 +26,7 @@
     <script src="js/componetes/hero/Creat.js"></script>
     <script src="js/componetes/hero/List.js"></script>
     <script src="js/componetes/hero/Show.js"></script>
+    <script src="js/componetes/hero/Update.js"></script>
     <script src='node_modules/vue-router/dist/vue-router.min.js'></script>
     <script src="js/router/index.js"></script>
     <script src="js/App.js"></script>
